# rust-qdrant

./: .env.sample  .gitignore  Cargo.toml  README.md  article.md  test.sh
src/: main.rs  routes.rs  state.rs
src/config/: mod.rs
src/handlers/: mod.rs
src/middleware/: mod.rs
src/models/: mod.rs
src/services/: mod.rs  openai.rs  qdrant.rs
src/types/: mod.rs
