[package]
name = "rust-qdrant"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
qdrant-client = "1.7.0"
async-openai = "0.28.1"
axum = { version = "0.7.9", features = ["http2"] }
hyper = { version = "1.1.0", features = ["full"] }
tokio = { version = "1.36", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"
validator = { version = "0.16", features = ["derive"] }

# Async support
async-trait = "0.1"

# Configuration
dotenv = "0.15"

# Middleware
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP types
http = "1.0"
http-body = "1.0"
